# spinnaker_driver_ros

./: CMakeLists.txt  LICENSE  README.md  hardware_synced_nodelet_plugins.xml  hw_trigger_nodelet_plugins.xml  package.xml  software_synced_nodelet_plugins.xml  stereo_camera_manager_nodelet_plugins.xml  sw_trigger_nodelet_plugins.xml  synced_stereo_nodelet_plugins.xml
cfg/: left_camera.yaml  left_camera_5MP.yaml  left_camera_8MP.yaml  right_camera.yaml  right_camera_5MP.yaml  right_camera_8MP.yaml  stereo_camera_parameters.cfg  stereo_config.yaml  stereo_config_2_3MP.yaml  stereo_config_8MP.yaml  synced_stereo_config.yaml  synced_stereo_config_8MP.yaml
include/spinnaker_driver_ros/: hardware_synced_nodelet.h  hw_trigger_nodelet.h  set_camera_feature.h  software_synced_nodelet.h  spinnaker_camera.h  stereo_camera_manager_node.h  stereo_camera_manager_nodelet.h  sw_trigger_nodelet.h  synced_stereo_nodelet.h
launch/: hw_synced_nodelet.launch  stereo_cameras.launch  stereo_cameras_nodelet.launch  sw_synced_nodelet.launch  synced_stereo_nodelet.launch
scripts/: image_view.py
src/: hardware_synced_nodelet.cc  hardware_synced_nodelet_main.cc  hw_trigger_nodelet.cc  hw_trigger_nodelet_main.cc  software_synced_nodelet.cc  software_synced_nodelet_main.cc  spinnaker_camera.cc  stereo_camera_manager_node.cc  stereo_camera_manager_node_main.cc  stereo_camera_manager_nodelet.cc  stereo_camera_manager_nodelet_main.cc  sw_trigger_nodelet.cc  sw_trigger_nodelet_main.cc  synced_stereo_nodelet.cc  synced_stereo_nodelet_main.cc
