<?xml version="1.0"?>
<package format="2">
  <name>spinnaker_driver_ros</name>
  <version>0.0.0</version>
  <description>A driver for spinnaker cameras for use with ROS</description>

  <maintainer email="mike.kalaitzakis@gmail.com">Mike Kalaitzakis</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>camera_info_manager</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>camera_info_manager</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>mavros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <nodelet plugin="${prefix}/stereo_camera_manager_nodelet_plugins.xml"/>
  </export>
</package>
